resource-manifests/ambassador-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: ambassador
  name: ambassador
  annotations:
    getambassador.io/config: |

    apiVersion: ambassador/v0
    kind: Mapping
    #name: frontend
    #prefix: /frontend/
    #service: frontend:3002
    name: backend
    prefix: /backend/
    service: backend:8081
spec:
  type: LoadBalancer
  ports:
    - name: ambassador
      port: 80
      targetPort: 80
  selector:
    service: ambassador
