resource-manifests/backend.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-lb
spec:
  type: LoadBalancer
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8081
  selector:
    app: backend


---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - image: animals-microservices-project/animals-app:H2
          imagePullPolicy: IfNotPresent #Always
          name: backend
          #env:
          #  - name: SA_LOGIC_API_URL
          #    value: "http://sa-logic"
          ports:
            - containerPort: 8081
