resource-manifests/gateway-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
  labels:
    app: gateway-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
      - name: gateway-service
        image: animals-microservices-project/gateway-service:0.0.1
        imagePullPolicy: IfNotPresent #Always
        ports:
        - containerPort: 8064
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  labels:
    app: gateway-service
spec:
  ports:
  - port: 8064
    protocol: TCP
  selector:
    app: gateway-service
  type: LoadBalancer #NodePort
