resource-manifests/veterinarians-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: veterinarians-service
  labels:
    app: veterinarians-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: veterinarians-service
  template:
    metadata:
      labels:
        app: veterinarians-service
    spec:
      containers:
      - image: animals-microservices-project/veterinarians-service:0.0.1
        imagePullPolicy: IfNotPresent #Always
        name: veterinarians-service
        ports:
        - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: veterinarians-service
  labels:
    app: veterinarians-service
spec:
  type: LoadBalancer
  ports:
  - port: 8084
    protocol: TCP
  selector:
    app: veterinarians-service
