resource-manifests/ingress.yml
#kind: Service
#apiVersion: v1
#metadata:
#  name: frontend-node-service
#spec:
#  type: NodePort
#  selector:
#    app: frontend
#  ports:
#  - port: 80
#    targetPort: 80
#    protocol: TCP
#    name: http
#---
#kind: Service
#apiVersion: v1
#metadata:
#  name: backend-node-service
#spec:
#  type: NodePort
#  selector:
#    app: backend
#  ports:
#  - port: 8081
#    targetPort: 8081
#    protocol: TCP
#    name: http
#---

# for K8s

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    #kubernetes.io/ingress.global-static-ip-name: "web-static-ip"
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: microservices.info
    http:
      paths:
      #- path: /
        #backend:
          #serviceName: frontend
          #servicePort: 3000
      - path: /animals-api/
        backend:
          serviceName: animals-app
          servicePort: 8081
      - path: /city-api/
        backend:
          serviceName: city-service
          servicePort: 8082
      - path: /counties-api/
        backend:
          serviceName: counties-service
          servicePort: 8083
      - path: /veterinarian-api/
        backend:
          serviceName: veterinarian-service
          servicePort: 8084
